refactored test cases in the ResultMessageTest class